Adjusted LSF params for AmpliconSuite

--- a/conf/lsf_juno.config
+++ b/conf/lsf_juno.config
@@ -21,5 +21,12 @@ executor {
 }
 
 process {
+
   clusterOptions = "-R cmorsc1"
+
+  withName: 'AMPLICONSUITE' {
+    time = { 48.h }
+    cpus = { 24 }
+  }
+
 }
