Update more LSF parameters. Fix missing param bug

--- a/conf/lsf_juno.config
+++ b/conf/lsf_juno.config
@@ -20,13 +20,35 @@ executor {
   perTaskReserve = true
 }
 
+//
+// N.B. If you are going to change any LSF parameter
+// (cpus, memory, time) below, you must change *ALL*
+// of them.
+//
+// Also, do not forget the unites for memory and time and
+// memory and time must be floats (e.g. 12.GB, 8.h, etc.)
+//
+
 process {
 
   clusterOptions = "-R cmorsc1"
 
   withName: 'AMPLICONSUITE' {
-    time = { 48.h }
     cpus = { 24 }
+    memory = { 24.GB }
+    time = { 48.h }
+  }
+
+  withName: 'SAMTOOLS_SORT_BAM' {
+    cpus   = { 12 }
+    memory = { 72.GB }
+    time   = { 8.h }
+  }
+
+  withName: 'SAMTOOLS_INDEX_BAM' {
+    cpus   = { 12 }
+    memory = { 12.GB }
+    time   = { 8.h }
   }
 
 }
